# coffea-bench

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  conda-coffea-bench.txt  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  unl_coffea_bench.yml  unl_req.txt
benchmarks/: test_coffea_laurelin_adl_example1.ipynb  test_coffea_laurelin_adl_example1.py  test_coffea_laurelin_adl_example2.ipynb  test_coffea_laurelin_adl_example2.py  test_coffea_laurelin_adl_example3.ipynb  test_coffea_laurelin_adl_example3.py  test_coffea_laurelin_adl_example4.ipynb  test_coffea_laurelin_adl_example4.py  test_coffea_laurelin_adl_example5.ipynb  test_coffea_laurelin_adl_example5.py  test_coffea_laurelin_adl_example6.ipynb  test_coffea_laurelin_adl_example6.py  test_coffea_laurelin_adl_example7.ipynb  test_coffea_laurelin_adl_example7.py  test_coffea_laurelin_adl_example8.ipynb  test_coffea_laurelin_adl_example8.py  test_coffea_laurelin_dimuon_analysis.py  test_coffea_laurelin_simple_func.py  test_pyspark_laurelin_trees.ipynb  test_pyspark_laurelin_trees.py  test_small_flat_tree.py
docs/: conf.py
laurelin-spark/: test_coffea_laurelin_adl_example1.ipynb  test_coffea_laurelin_adl_example1.py  test_coffea_laurelin_adl_example2.ipynb  test_coffea_laurelin_adl_example3.ipynb  test_coffea_laurelin_adl_example4.py  test_coffea_laurelin_adl_example5.ipynb  test_coffea_laurelin_adl_example6.py  test_coffea_laurelin_adl_example8.py
tests/: __init__.ipynb  __init__.py  coffea_bench_1.ipynb  coffea_bench_2.ipynb  (+29 more)
(+85 files in other folders)
