[build-system]
requires = ["wheel", "setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "test/_version.py"


[tool.pytest.ini_options]
addopts = "-ra -Wd"
testpaths = ["tests"]

[tool.check-manifest]
ignore = [
    ".github/**",
    "docs/**",
    ".pre-commit-config.yaml",
    ".readthedocs.yml",
    "test/_version.py",
]
